--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@vztxt/lib": "workspace:*",
+    "comlink": "^4.4.1",
     "file-saver": "^2.0.5",
     "lit-html": "^3.1.3",
     "monaco-editor": "^0.48.0",
